@@ -1,5 +1,6 @@
 2024-01-13  Robby Stephenson  <robby@periapsis.org>
 
+	* Updated Open Library source to search for comics (Bug 479506).
 	* Fixed bug with filter dialog buttons (Bug 479771).
 	* Updated iTunes, Discogs, and MusicBrainz to separate multi-disc tracks (Bug 479503).
 
